--- a/webapp/view/Launchpad.view.xml
+++ b/webapp/view/Launchpad.view.xml
@@ -83,7 +83,7 @@
 										<html:div class="utg-fiori-launchpad-main-tileContainer">
 											<!--How to Design Fiori Apps-->
 											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Design Fiori Apps"
-												subheader="Single entry point to access all apps" frameType="OneByOne" app:tileName="topic-launchpad" press="onLaunchpadTilePress">
+												subheader="Single entry point to access all apps" frameType="OneByOne" app:tileName="topic-designFioriApps" press="onLaunchpadTilePress">
 												<tileContent>
 													<TileContent unit="20" footer="slides">
 														<content>
