finish launchpad slides

--- a/webapp/component/designFioriApps/view/Main.view.xml
+++ b/webapp/component/designFioriApps/view/Main.view.xml
@@ -25,7 +25,7 @@
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-11"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-12"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-13"/></utg:Slide>
-        <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-14"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-14"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-15"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-16"/></utg:Slide>
     </utg:SlideNavContainer>
