finish list report demo

--- a/webapp/component/designFioriApps/css/style.css
+++ b/webapp/component/designFioriApps/css/style.css
@@ -1,5 +1,5 @@
-/* adaptiveness table example */
-
-.sapMListBGTranslucent .sapMListTblSubRow {
-	background: rgba(255,255,255,1);
+.utg-fiori-dynamicPage {
+	width: 110vmin;
+    margin: 10vmin auto;
+    height: 80vmin;
 }
