finish fiori elements

--- a/webapp/component/designFioriApps/css/style.css
+++ b/webapp/component/designFioriApps/css/style.css
@@ -1,5 +1,5 @@
 .utg-fiori-dynamicPage {
-	width: 110vmin;
-    margin: 10vmin auto;
-    height: 80vmin;
+	width: 60%;
+    margin: 6vmin auto;
+    height: 88%;
 }
