--- a/webapp/view/TopicBuildFioriApps.view.xml
+++ b/webapp/view/TopicBuildFioriApps.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="utegration.fiori.frontend.controller.TopicFioriElement"
+    controllerName="utegration.fiori.frontend.controller.TopicBuildFioriApps"
 	xmlns:html="http://www.w3.org/1999/xhtml"
 	xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
 	xmlns:uxap="sap.uxap"
