--- a/webapp/component/designFioriApps/view/Main.view.xml
+++ b/webapp/component/designFioriApps/view/Main.view.xml
@@ -36,6 +36,9 @@
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-22"/></utg:Slide>
         <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-23"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-24"/></utg:Slide>
+        <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-25"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-26"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.designFioriApps.view.slides.Slide-27"/></utg:Slide>
     </utg:SlideNavContainer>
 
 </mvc:View>
