--- a/webapp/component/history/view/Main.view.xml
+++ b/webapp/component/history/view/Main.view.xml
@@ -22,7 +22,7 @@
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.history.view.slides.Slide-08"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.history.view.slides.Slide-09"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.history.view.slides.Slide-10"/></utg:Slide>
-        <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.history.view.slides.Slide-11"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.history.view.slides.Slide-11"/></utg:Slide>
     </utg:SlideNavContainer>
 
 </mvc:View>
